# bays

./: bayes01.ipynb  bayes02.ipynb  pyproject.toml
