[tool.poetry]
name = "bayesian"
version = "0.1.0"
description = ""
authors = ["no1986 <n.ohkawa1221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.3"
seaborn = "^0.12.2"
scipy = {version = "^1.10.1", python = "<3.12"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
